--- a/index.html
+++ b/index.html
@@ -3,17 +3,31 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title></title>
+  <title>Give me a Advice!</title>
 
 
   <!-- TailwindCSS Link -->
   <link rel="stylesheet" href="./src/css/style.css">
 </head>
 
-<body>
-  <div class="text-blue-600 text-5xl font-semibold">Kakashi Hatake</div>
+<body class="bg-emerald-600 p-3 sm:p-10">
+
+  <h1 class="text-center text-2xl font-bold m-10">Boomer Advice</h1>
+  <div class="bg-white max-w-xl mx-auto p-5 rounded shadow-lg">
+    <blockquote class="text-xl italic font-semibold text-gray-900">
+      <svg class="w-8 h-8 text-gray-400 dark:text-gray-600 mb-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+        fill="currentColor" viewBox="0 0 18 14">
+        <path
+          d="M6 0H2a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h4v1a3 3 0 0 1-3 3H2a1 1 0 0 0 0 2h1a5.006 5.006 0 0 0 5-5V2a2 2 0 0 0-2-2Zm10 0h-4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h4v1a3 3 0 0 1-3 3h-1a1 1 0 0 0 0 2h1a5.006 5.006 0 0 0 5-5V2a2 2 0 0 0-2-2Z" />
+      </svg>
+      <p></p>
+    </blockquote>
+
+    <button type="button" class="px-4 py-1 mt-3 rounded text-white bg-blue-500 hover:bg-blue-600">Give me
+      Another</button>
+  </div>
+
 
 
   <script type="module" src="./src/js/main.js"></script>
